WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119528
DFG FixupPhase should insert Int32ToDouble nodes for number uses in NewArray, and SpeculativeJIT 64-bit should not try to coerce integer constants to double constants
https://bugs.webkit.org/show_bug.cgi?id=119528
Summary
DFG FixupPhase should insert Int32ToDouble nodes for number uses in NewArray,...
Filip Pizlo
Reported
2013-08-06 14:51:03 PDT
DFG FixupPhase should insert Int32ToDouble nodes for number uses in NewArray, and SpeculativeJIT 64-bit should not try to coerce integer constants to double constants
Attachments
Patch
(10.78 KB, patch)
2013-08-06 14:55 PDT
,
Filip Pizlo
ggaren
: review+
eflews.bot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion
(507.70 KB, application/zip)
2013-08-06 16:20 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(1.20 MB, application/zip)
2013-08-06 16:50 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-08-06 14:55:39 PDT
Created
attachment 208219
[details]
Patch
Filip Pizlo
Comment 2
2013-08-06 14:56:41 PDT
<
rdar://problem/14655517
>
Geoffrey Garen
Comment 3
2013-08-06 15:00:07 PDT
Comment on
attachment 208219
[details]
Patch r=me
Mark Hahnenberg
Comment 4
2013-08-06 15:02:51 PDT
Comment on
attachment 208219
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=208219&action=review
> Source/JavaScriptCore/dfg/DFGDriver.cpp:-75 > -
Revert!
Mark Hahnenberg
Comment 5
2013-08-06 15:03:22 PDT
(In reply to
comment #4
)
> (From update of
attachment 208219
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=208219&action=review
> > > Source/JavaScriptCore/dfg/DFGDriver.cpp:-75 > > - > > Revert!
Unless it was intentional, of course.
Filip Pizlo
Comment 6
2013-08-06 16:01:15 PDT
(In reply to
comment #5
)
> (In reply to
comment #4
) > > (From update of
attachment 208219
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=208219&action=review
> > > > > Source/JavaScriptCore/dfg/DFGDriver.cpp:-75 > > > - > > > > Revert! > > Unless it was intentional, of course.
Yeah, it was intentional :-) It seems that we got extra whitespace in there from past bisecting hacks.
EFL EWS Bot
Comment 7
2013-08-06 16:15:34 PDT
Comment on
attachment 208219
[details]
Patch
Attachment 208219
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/1414050
Build Bot
Comment 8
2013-08-06 16:20:48 PDT
Comment on
attachment 208219
[details]
Patch
Attachment 208219
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/1418001
New failing tests: fast/dom/Window/anonymous-slot-with-changes.html fast/dom/Window/window-postmessage-clone.html
Build Bot
Comment 9
2013-08-06 16:20:50 PDT
Created
attachment 208223
[details]
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.4
Build Bot
Comment 10
2013-08-06 16:50:22 PDT
Comment on
attachment 208219
[details]
Patch
Attachment 208219
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/1370578
New failing tests: fast/dom/Window/anonymous-slot-with-changes.html
Build Bot
Comment 11
2013-08-06 16:50:24 PDT
Created
attachment 208227
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
Filip Pizlo
Comment 12
2013-08-06 19:29:12 PDT
(In reply to
comment #11
)
> Created an attachment (id=208227) [details] > Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 > > The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. > Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
This is a real failure: tryGetIndexQuickly is asserting too strongly. It should assert that in the case of an INT32 array, the result is either JSValue() or int32; but it's asserting that it's an int32.
Filip Pizlo
Comment 13
2013-08-06 20:57:29 PDT
(In reply to
comment #12
)
> (In reply to
comment #11
) > > Created an attachment (id=208227) [details] [details] > > Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 > > > > The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. > > Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4 > > This is a real failure: tryGetIndexQuickly is asserting too strongly. It should assert that in the case of an INT32 array, the result is either JSValue() or int32; but it's asserting that it's an int32.
Yup. Fixing that assertion also makes everything pass.
Filip Pizlo
Comment 14
2013-08-06 21:36:56 PDT
Landed in
http://trac.webkit.org/changeset/153778
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug